# polyglot

./: blog.hs  polyglot.cabal
.stack-work/install/x86_64-osx/lts-7.14/8.0.1/flag-cache/: aeson-0.11.2.1-ByXhYhAOjwT2lX0EEzDlEU  aeson-pretty-0.8.2-8tC2vmXHYL41zPtfZsYLtW  ansi-terminal-0.6.2.3-448ipfN5j28Ha0AgPiJmdI  appar-0.1.4-1in4Ewd8JBkAYDZSWXLSe0  async-2.1.1-xFiBzw9xoB8HPZAuxUY2o  attoparsec-0.13.1.0-2AyzLuPV4T95RcYDl03Ghe  auto-update-0.1.4-GAesfFmqoZzBz6e09kRyzb  base-compat-0.9.1-tmPpmtbHbvIDjFWbkjGrR  base64-bytestring-1.0.0.1-In9M41tLtcS9QYt3QpGpNY  blaze-builder-0.4.0.2-6Lw6V3wDhf3KDMasjNOEeG  blaze-html-0.8.1.3-7Mt9x337mv4IO4jcUMt8gl  blaze-markup-0.7.1.1-GGM5nP9jZuZ9fymRS32rvZ  byteorder-1.0.4-BbL4c17EpZrL9PcZm0xys9  bytestring-builder-0.10.8.1.0-4GkSrJiY0n01lBdCh7onK  case-insensitive-1.2.0.7-FDS9muZSKvyFFsDxjwuYX9  cmdargs-0.10.14-8WOlFWoK1XlCebTZE2edgd  cookie-0.4.2.1-5P6dolSQSje7mJQ7M5DM5i  data-default-class-0.1.2.0-FYQpjIylblBDctdkHAFeXA  dlist-0.8.0.2-GWAMmbX9rLg3tqrbOizHGv  easy-file-0.2.1-bAUkz2rC2kFhBbPjw2Of5  exceptions-0.8.3-7py7fmRxowDFpHmiHGKrTb  fail-4.9.0.0-FGE8TmYPyfd2ZUpoMVx9sD  fast-logger-2.4.7-9mz5trxoQfRK4VvzRSNtIb  hex-0.1.2-5b29FECtEYw7JOQYzG1Un6  http-date-0.0.6.1-GxuKyJS3TPnDu1ymqrm6RW  http-types-0.9.1-BTSIP6lzG5DE6u136Payws  http2-1.6.2-7iyxxNi2iWDCArthWistHQ  iproute-1.7.1-9hsGfRvggCmFA0ueZi5Sd9  (+30 more)
src/: .Main.hs.swp  Main.hs  test.js
src/Controllers/: .Home.hs.swo  Home.hs
src/Models/: barnes.hs  sammple.hs  sample.hs
src/Static/css/: blo.css
src/Views/: .Index.hs.swp  Home.hs  Index.hs  Utils.hs  sam.hs  temp.html
