name:                polyglot
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/hitscotty/polyglot#readme
license:             BSD3
license-file:        LICENSE
author:              Jonathan Portorreal
maintainer:          Jportorreal77@gmail.com
copyright:           2016 Jonathan Portorreal
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable polyglot
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       time,
                       aeson,
                       scotty
